<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/texture"
    android:orientation="vertical"
    tools:context=".tableno"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/enter_table_number"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"
         />

    <EditText
        android:id="@+id/entertable"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="81dp"
        android:layout_margin="@android:dimen/notification_large_icon_height"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/enter_here"
        android:inputType="phone"
        android:maxLength="2"
        android:textSize="38sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="346dp"
        android:layout_height="402dp"
        android:layout_gravity="center"
        android:src="@drawable/table">

    </androidx.appcompat.widget.AppCompatImageView>

    <Button
        android:onClick="proceed"
        android:id="@+id/proceed2"
        android:layout_width="190dp"
        android:layout_height="94dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/procced1"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>