<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    android:orientation="vertical"
    android:background="@drawable/texture"
    android:padding="20dp"
    android:weightSum="10"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/menu">
        </ImageView>
    </RelativeLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="2"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight="8"
        android:padding="14dp">

        <!--Row 1-->
        <!-- column 1 -->
        <androidx.cardview.widget.CardView
            android:onClick="start"
            android:id="@+id/starters"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40sp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="123dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/starters"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/starters"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <!-- column 2 -->
        <androidx.cardview.widget.CardView
            android:onClick="veg"
            android:id="@+id/veg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="40sp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="123dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/veg">
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/veg"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold">
                </TextView>



            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <!--Row 1-->
        <!-- column 1 -->
        <androidx.cardview.widget.CardView
            android:onClick="non_veg"
            android:id="@+id/non_veg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="40sp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="123dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/non_veg">
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/non_vegg"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <!-- column 2 -->
        <androidx.cardview.widget.CardView
            android:onClick="dessert"
            android:id="@+id/desserts"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="40sp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="123dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/dessert">
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/dessert"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold">
                </TextView>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">


        <Button
            android:onClick="fin_ord"
            android:id="@+id/proceed1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proccedd"
            android:textStyle="bold"
            android:textSize="20sp">
        </Button>

        <TextView
            android:layout_marginLeft="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/total_on_mm"
            android:text=""
            android:textColor="@android:color/white"
            android:padding="20dp">

        </TextView>

    </LinearLayout>



</LinearLayout>